--- a/back/.env
+++ b/back/.env
@@ -1,1 +1,4 @@
-PORT=5000
+ MONGO_URI=mongodb+srv://shubhamsingh33972:shubhams@goodnotes.lp1by.mongodb.net/?appName=goodnotes
+ JWT_SECRET=your_jwt_secret_key_here
+ PORT=5000
+ FRONTEND_URL=http://localhost:5173
