feat: Complete app polish - mobile support, about/help pages, and shared note cloning

--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,6 @@
- MONGO_URI=mongodb+srv://shubhamsingh33972:shubhams@goodnotes.lp1by.mongodb.net/?appName=goodnotes
+ MONGO_URI=mongodb+srv://shubhamsingh33972:shubhams@goodnotes.lp1by.mongodb.net/?appName=goodnotes/
  JWT_SECRET=sarbani302003
  PORT=5000
  FRONTEND_URL=http://localhost:5173
+ EMAIL_USERNAME=makingitsimplefamiy@gmail.com
+ EMAIL_PASSWORD=kheozkyzriecbyfq
