--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nano": "^10.1.4",
+    "nodemailer": "^7.0.12",
     "openpgp": "^6.1.0",
     "pouchdb": "^9.0.0",
     "uuid": "^11.1.0"
