--- a/front/package.json
+++ b/front/package.json
@@ -39,6 +39,7 @@
     "is-url": "^1.2.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.487.0",
+    "nodemailer": "^7.0.12",
     "openai": "^4.93.0",
     "openpgp": "^6.1.0",
     "pouchdb": "^9.0.0",
