--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "@tiptap/extension-underline": "^2.27.1",
     "@tiptap/react": "^2.27.1",
     "@tiptap/starter-kit": "^2.27.1",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "class-variance-authority": "^0.7.1",
